--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       </button>
       <ul class="nav-links">
         <li><a href="index.html" class="active">Händelser</a></li>
-        <li><a href="ledig.html">Ledighetsansökningar</a></li>
+        <li><a href="packlista.html">Packlista</a></li>
         <li><a href="budget.html">Budget</a></li>
       </ul>
     </div>
