--- a/packlista.html
+++ b/packlista.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Packlista</title>
+  <title>Packlista för Handbollscup</title>
   <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
@@ -25,12 +25,12 @@
     </div>
   </nav>
 
-  <h1 id="page-title">Packlista: Handbollscup med övernattning i klassrum</h1>
+  <h1 id="page-title">🏐 Packlista: Handbollscup med övernattning i klassrum</h1>
   <p style="font-weight:bold; margin-left:0.5rem;">(Fri från nötter)</p>
 
-  <div class="container">
-    <div class="section">
-      <h2>📦 Viktigast (måste-ha)</h2>
+  <div class="event-group">
+    <div class="event-card">
+      <h2 class="event-title">📦 Viktigast (måste-ha)</h2>
       <ul>
         <li>Handbollskläder: matchtröja, shorts, strumpor (gärna flera uppsättningar)</li>
         <li>Handbollsskor</li>
@@ -42,8 +42,8 @@
       </ul>
     </div>
 
-    <div class="section">
-      <h2>😴 Sova i klassrum</h2>
+    <div class="event-card">
+      <h2 class="event-title">😴 Sova i klassrum</h2>
       <ul>
         <li>Madrass/liggunderlag (gärna uppblåsbar för komfort)</li>
         <li>Sovsäck eller täcke & kudde</li>
@@ -53,8 +53,8 @@
       </ul>
     </div>
 
-    <div class="section">
-      <h2>🧴 Hygien & personlig packning</h2>
+    <div class="event-card">
+      <h2 class="event-title">🧴 Hygien & personlig packning</h2>
       <ul>
         <li>Tandborste & tandkräm</li>
         <li>Deodorant</li>
@@ -65,8 +65,8 @@
       </ul>
     </div>
 
-    <div class="section">
-      <h2>👕 Kläder utanför planen</h2>
+    <div class="event-card">
+      <h2 class="event-title">👕 Kläder utanför planen</h2>
       <ul>
         <li>Ombyte för kvällen (t.ex. mjukiskläder)</li>
         <li>Underkläder & strumpor (extra!)</li>
@@ -75,8 +75,8 @@
       </ul>
     </div>
 
-    <div class="section">
-      <h2>🍏 Mat & snacks</h2>
+    <div class="event-card">
+      <h2 class="event-title">🍏 Mat & snacks</h2>
       <ul>
         <li>Frukt (banan, äpple, päron)</li>
         <li>Bars utan nötter</li>
@@ -85,8 +85,8 @@
       </ul>
     </div>
 
-    <div class="section">
-      <h2>🎒 Övrigt & bra-att-ha</h2>
+    <div class="event-card">
+      <h2 class="event-title">🎒 Övrigt & bra-att-ha</h2>
       <ul>
         <li>Laddare till mobil</li>
         <li>Powerbank (om lång dag utan laddning)</li>
