--- a/packlista.html
+++ b/packlista.html
@@ -25,7 +25,7 @@
     </div>
   </nav>
 
-  <h1 id="page-title">🏐 Packlista: Handbollscup med övernattning i klassrum</h1>
+  <h1 id="page-title">Packlista: Övernattning i klassrum</h1>
   <p style="font-weight:bold; margin-left:0.5rem;">(Fri från nötter)</p>
 
   <div class="event-group">
@@ -46,6 +46,8 @@
       <h2 class="event-title">😴 Sova i klassrum</h2>
       <ul>
         <li>Madrass/liggunderlag (gärna uppblåsbar för komfort)</li>
+        <li>Sängkläder</li>
+        <li>Lakan att lägga under luftmadrass</li>
         <li>Sovsäck eller täcke & kudde</li>
         <li>Pyjamas / mjukiskläder</li>
         <li>Ögonmask + öronproppar (bra om det är ljust eller stökigt)</li>
