--- a/gantt.html
+++ b/gantt.html
@@ -1,11 +1,26 @@
 <!DOCTYPE html>
-<html>
+<html lang="sv">
   <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Frappe Gantt-schema</title>
-    <link rel="stylesheet" href="https://unpkg.com/frappe-gantt/dist/frappe-gantt.css">
+    <link rel="stylesheet" href="https://unpkg.com/frappe-gantt/dist/frappe-gantt.css" />
+    <style>
+      body {
+        font-family: Arial, sans-serif;
+        margin: 0;
+        padding: 0;
+      }
+
+      #gantt {
+        width: 100%;
+        height: 600px;
+      }
+    </style>
   </head>
   <body>
-    <svg id="gantt"></svg>
+    <h1 style="text-align:center; margin-top:20px;">Gantt-schema för säsongen</h1>
+    <div id="gantt"></div>
 
     <script src="https://unpkg.com/frappe-gantt/dist/frappe-gantt.min.js"></script>
     <script>
@@ -23,6 +38,13 @@
           start: '2025-06-06',
           end: '2025-06-20',
           progress: 0
+        },
+        {
+          id: 'Task 3',
+          name: 'Test',
+          start: '2025-06-21',
+          end: '2025-06-25',
+          progress: 50
         }
       ];
 
