--- a/gantt.html
+++ b/gantt.html
@@ -30,7 +30,7 @@
     <h1 style="text-align:center; margin-top:20px;">Gantt-schema för säsongen</h1>
     <div id="gantt-container"></div>
 
-    <script src="https://unpkg.com/frappe-gantt/dist/frappe-gantt.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/frappe-gantt@0.5.0/dist/frappe-gantt.min.js"></script>
     <script>
       document.addEventListener("DOMContentLoaded", function() {
         var tasks = [
