--- a/gantt.html
+++ b/gantt.html
@@ -19,51 +19,12 @@
       height: 600px;
       width: 100%;
       border: 1px solid black;
-      margin-bottom: 20px;
-    }
-    #form-container {
-      max-width: 600px;
-      margin: 0 auto 20px auto;
-      padding: 10px;
-      background: #fff;
-      border: 1px solid #ddd;
-      border-radius: 5px;
-    }
-    #form-container input,
-    #form-container button {
-      margin: 5px 0;
-      padding: 5px;
-      width: 100%;
-    }
-    .button-container {
-      text-align: center;
-    }
-    .button-container button {
-      margin: 0 5px;
-      padding: 8px 12px;
-      cursor: pointer;
     }
   </style>
 </head>
 <body>
   <h1>Gantt-schema för säsongen</h1>
-
-  <div id="form-container">
-    <h3>Lägg till uppgift</h3>
-    <input type="text" id="task-name" placeholder="Uppgiftsnamn" required />
-    <input type="date" id="task-start" />
-    <input type="date" id="task-end" />
-    <input type="number" id="task-progress" placeholder="Progress %" min="0" max="100" />
-    <button id="add-task">Lägg till uppgift</button>
-  </div>
-
   <div id="gantt-container"></div>
-
-  <div class="button-container">
-    <button onclick="gantt.change_view_mode('Day')">Dag</button>
-    <button onclick="gantt.change_view_mode('Week')">Vecka</button>
-    <button onclick="gantt.change_view_mode('Month')">Månad</button>
-  </div>
 
   <script src="frappe-gantt.min.js"></script>
   <script>
@@ -82,6 +43,13 @@
           start: '2025-06-06',
           end: '2025-06-15',
           progress: 60,
+        },
+        {
+          id: 'Task3',
+          name: 'Avslut',
+          start: '2025-06-16',
+          end: '2025-06-20',
+          progress: 100,
         }
       ];
 
@@ -96,45 +64,7 @@
               ${task.progress}% klart
             </div>
           `;
-        },
-        on_date_change: function(task, start, end) {
-          console.log('Datum ändrat för', task.name);
-        },
-        on_progress_change: function(task, progress) {
-          console.log('Progress ändrat för', task.name);
-        },
-        on_click: function(task) {
-          console.log('Klickade på', task.name);
         }
-      });
-
-      window.gantt = gantt; // Så att knapparna kan ändra vy
-
-      document.getElementById("add-task").addEventListener("click", function() {
-        const name = document.getElementById("task-name").value;
-        const start = document.getElementById("task-start").value;
-        const end = document.getElementById("task-end").value;
-        const progress = parseInt(document.getElementById("task-progress").value) || 0;
-
-        if (!name || !start || !end) {
-          alert("Fyll i alla fält!");
-          return;
-        }
-
-        const newTask = {
-          id: "Task" + (tasks.length + 1),
-          name: name,
-          start: start,
-          end: end,
-          progress: progress
-        };
-
-        tasks.push(newTask);
-        gantt.refresh(tasks);
-        document.getElementById("task-name").value = "";
-        document.getElementById("task-start").value = "";
-        document.getElementById("task-end").value = "";
-        document.getElementById("task-progress").value = "";
       });
     });
   </script>
