--- a/gantt.html
+++ b/gantt.html
@@ -26,7 +26,7 @@
   <h1>Gantt-schema för säsongen</h1>
   <div id="gantt-container"></div>
 
-  <script src="frappe-gantt.umd.js"></script>
+  <script src="frappe-gantt.min.js"></script>
   <script>
     document.addEventListener("DOMContentLoaded", function() {
       console.log("DOM laddad");
